:bug: Fix misaligned right sidebar menus

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/grid_cell.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/grid_cell.scss
@@ -12,8 +12,19 @@
   gap: deprecated.$s-16;
 }
 
+.grid-cell-menu {
+  display: grid;
+  grid-template-columns: repeat(8, var(--sp-xxxl));
+  column-gap: var(--sp-xs);
+}
+
 .grid-cell-menu-title {
+  grid-column: span 8;
   font-size: deprecated.$fs-11;
+}
+
+.grid-cell-menu-container {
+  grid-column: span 8;
 }
 
 .row {
